# living-topics

./: README.md  german bert.ipynb  pyproject.toml  sentence-transformers-cloud.ipynb  sentence-transformers.ipynb  termdat scraper.ipynb  test.py  transformer ZH.ipynb
bk/: linguee.txt  medien.txt  termdat.txt  wikipedia.txt
bund/: termdat.txt  wikipedia.txt
eda/: termdat.txt  wikipedia.txt
edi/: wikipedia.txt
efd/: termdat.txt  wikipedia.txt
ejpd/: termdat.txt  wikipedia.txt
gemeinde/: termdat.txt  wikipedia.txt
kantone/: termdat.txt  wikipedia.txt
uvek/: termdat.txt  wikipedia.txt
vbs/: termdat.txt  wikipedia.txt
wbf/: termdat.txt  wikipedia.txt
